# fortuned

./: .gitignore  CHANGES_SUMMARY.md  DEPLOY_NOW.md  FIX_SUMMARY.md  ONLINE_STATUS_COMPLETE.md  ONLINE_STATUS_REIMPLEMENTATION.md  ONLINE_STATUS_TEST_PLAN.md  README.md  TEST_ONLINE_STATUS.md  THREADS_DOCUMENTATION.md  client_examplel.dart  docker-compose.yaml  env.example  ffigen.yaml  pattern_storage.dart  patterns_state.dart  pubspec.yaml  run-android.ps1  run-ios.sh  sequencer_state.dart
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.github/workflows/: deploy-app.yml  deploy-init.yml  deploy-reusable.yml  deploy-secrets-init.yml  deploy-secrets.yml  deploy.yml
android/app/: build.gradle.kts
app/: .gitignore  COMPLETE_FIX_SUMMARY.md  LOOP_MODE_STEP_ADD_FIX.md  SEAMLESS_STEP_RESIZE_FIX.md  env.example  holiday_list.json  pattern_storage.dart  patterns_state.dart  pubspec.yaml  run-android.ps1  run-ios.sh  sample_scanner.py  samples_manifest.json
app/android/: gradle.properties
app/docs/: IMPORT_FIX_SUMMARY.md  LOG_LEVELS.md  LOG_REDUCTION_SUMMARY.md  LOG_SPAM_FIX_FINAL.md  README-HTTPS.md  UNIFIED_PROJECT_LOADING_PLAN.md  build.md  main.md  migration_checkpoints_screen_to_v2.md  migration_plan_simplified_sequencer_to_v2.md  native_state_sync_pattern.md  project_tiles_layout_guide.md  roadmap.md  sequencer_update_implementation.md  sequencer_v2_implementation.md  thread_deletion_sync_analysis.md  threads_reimplementation_summary.md
app/icons/: send-arrow  thread-menu  thread-view
app/ios/: Podfile
app/lib/: conversion_library.dart  main.dart  sequencer_bindings_generated.dart  sequencer_library.dart
app/native/: CMakeLists.txt  conversion.mm  log.h  pitch.h  pitch.mm  playback.h  playback.mm  playback_sunvox.mm  preview.h  preview.mm  recording.h  recording.mm  recording.mm.backup  sample_bank.h  sample_bank.mm  sequencer.h  sequencer.mm  sunvox_wrapper.h  sunvox_wrapper.mm  table.h  table.mm  undo_redo.h  undo_redo.mm  wav_writer.h  wav_writer.mm
app/test/: widget_test.dart
certbot/: Dockerfile  certbot.sh
docs/: README-HTTPS.md  future_features.md  main.md  performance_optimization_guide.md  prompt.md  resources.md  roadmap.md  threads.md  user_flow.md
docs/features/: pitch.md  pitch_soundtouch.md  playback.md  smoothing.md
docs/features_implementation/: mp3_conversion.md  pitch.md  playback.md  recording.md
docs/legacy/: legacy.md  resolved_issues.md
docs/user_flow/: checkpoints_screen.md  checkpoints_screen_flow.md  initial_screen.md  initial_screen_flow.md  sequencer.md  sequencer_header_layout.md  sequencer_screen_flow.md  user_profile_screen_flow.md
haproxy/: Dockerfile  entrypoint.sh  haproxy.cfg
ios/: Podfile
ios/Classes/: Runner-Bridging-Header.h  miniaudio_bridge.c
ios/Flutter/: Release.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: conversion_bindings_generated.dart  conversion_library.dart  demo_state_usage.dart  lame_bindings_generated.dart  lame_library.dart  main.dart  miniaudio.dart  miniaudio_bindings_generated.dart  miniaudio_library.dart  sequencer_bindings_generated.dart  sequencer_library.dart  test_card_stack.dart
lib/models/: app_state.dart
lib/screens/: chat_conversation_screen.dart  chat_screen.dart  checkpoints_screen.dart  contacts_screen.dart  login_screen.dart  pattern_screen.dart  pattern_selection_screen.dart  publish_screen.dart  sample_browser_screen.dart  sequencer_screen.dart  thread_screen.dart  tracker_screen.dart  user_profile_screen.dart  user_projects_screen.dart  user_soundseries_screen.dart  users_screen.dart
lib/services/: app_state_service.dart  audio_conversion_service.dart  auth_service.dart  chat_client.dart  reliable_storage.dart  threads_service.dart  tracker_service.dart  user_profile_service.dart
lib/state/: app_state.dart  chat_state.dart  (+3 more)
linux/: CMakeLists.txt
native/: CMakeLists.txt  conversion.h  conversion.mm  lame_wrapper.h  lame_wrapper.mm  miniaudio.c  miniaudio.c.backup  miniaudio.h  miniaudio_wrapper.c  miniaudio_wrapper.h  miniaudio_wrapper.mm  sequencer.h  sequencer.mm
native/lame/: config.h
native/lame_android/: config.h  gain_analysis.c  machine.h  nasm_stubs.c  set_get.c  takehiro.c
native/soundtouch/: cpu_detect_arm.cpp
nginx/: .dockerignore  .example.env  Dockerfile  README.md  env.example  init-letsencrypt.sh  nginx.conf  renew-certificates.sh
server/: .dockerignore  .example.env  Dockerfile  README.md  docker-compose.yaml  haproxy.cfg  main.py  pyproject.toml  renew-cert.sh  test_s3_upload.py
server/.github/workflows/: deploy-app.yml
server/app/: main.py
server/app/db/: connection.py  design_patterns.py  init_collections.py
server/app/http_api/: audio.py  deep_links.py  files.py  logging_middleware.py  rate_limiter.py  router.py  threads.py  users.py
server/app/jobs/: audio_cleanup.py
server/app/storage/: s3_service.py
server/app/websockets/: router.py
server/app/ws/: router.py
server/jobs/: run_audio_cleanup.sh
test/: widget_test.dart
tools/: convert_table.sh  table_example.txt
tools/node_graph_viz/: README.md  pyproject.toml
tools/node_graph_viz/native/: build.sh  nodegraph.c
tools/node_graph_viz/node_graph_viz/: __main__.py  backend.py  engine.py  ui.py
tools/node_graph_viz/node_graph_viz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
workflows/: deploy-app.yml
(+366 files in other folders)
