[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "node-graph-viz"
version = "0.1.0"
description = "Interactive node-graph style sequencer visualization with PyQt5"
authors = [{ name = "Roman Smirnov" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyQt5>=5.15",
  "numpy>=1.23",
  "soundfile>=0.12"
]

[project.scripts]
node-graph-viz = "node_graph_viz.__main__:main"

[tool.uv]
# uv will respect standard pyproject metadata. Optional constraints or indexes can be added here if needed.

[tool.setuptools.packages.find]
where = ["."]
include = ["node_graph_viz*"]
